# webmocket

./: .gitignore  .isort.cfg  MANIFEST.in  README.md  pyproject.toml  setup.py
examples/: README.md  client.py
examples/docker/: Dockerfile  docker-compose.yml
webmocket/: server.py
